add_subdirectory(adapt)
add_subdirectory(broaden)
add_subdirectory(diag)
add_subdirectory(hilb)
add_subdirectory(intavg)
add_subdirectory(integ)
add_subdirectory(kk)
add_subdirectory(matrix)
add_subdirectory(mats)
add_subdirectory(nrgchain)
add_subdirectory(resample)
add_subdirectory(specmoments)
add_subdirectory(tdavg)
add_subdirectory(unitary)
