EXTRA_DIST = any-n2-diag.dat any-n2-doublet-1.dat any-n2-doublet1.dat \
any-n2-In2.dat any-n2-offdiag.dat any-n2-spin-1.dat any-n2-spin1.dat \
any-n3-diag.dat any-n3-doublet0.dat any-n3-doublet-2.dat any-n3-doublet2.dat \
any-n3-In2.dat any-n3-offdiag.dat any-n3-spin0.dat any-n3-spin-2.dat \
any-n3-spin2.dat
