EXTRA_DIST = iso2lr-2ch-def.dat iso2lr-2ch-doubletdiffmm.dat \
iso2lr-2ch-doubletdiffmp.dat iso2lr-2ch-doubletdiffpm.dat \
iso2lr-2ch-doubletdiffpp.dat iso2lr-2ch-doubletmm.dat iso2lr-2ch-doubletmp.dat \
iso2lr-2ch-doubletpm.dat iso2lr-2ch-doubletpp.dat iso2lr-2ch-In2.dat \
iso2lr-2ch-offdiag.dat iso2lr-2ch-QN.dat iso2lr-2ch-singlet.dat \
iso2lr-2ch-singlet-odd.dat iso2lr-2ch-spindown-isodowna.dat \
iso2lr-2ch-spindown-isodownb.dat iso2lr-2ch-spindown-isodowndiffa.dat \
iso2lr-2ch-spindown-isodowndiffb.dat iso2lr-2ch-spindown-isoupa.dat \
iso2lr-2ch-spindown-isoupb.dat iso2lr-2ch-spindown-isoupdiffa.dat \
iso2lr-2ch-spindown-isoupdiffb.dat iso2lr-2ch-spinup-isodowna.dat \
iso2lr-2ch-spinup-isodownb.dat iso2lr-2ch-spinup-isodowndiffa.dat \
iso2lr-2ch-spinup-isodowndiffb.dat iso2lr-2ch-spinup-isoupa.dat \
iso2lr-2ch-spinup-isoupb.dat iso2lr-2ch-spinup-isoupdiffa.dat \
iso2lr-2ch-spinup-isoupdiffb.dat iso2lr-2ch-tripletdiffm.dat \
iso2lr-2ch-tripletdiffp.dat iso2lr-2ch-tripletdiffs.dat iso2lr-2ch-tripletm.dat \
iso2lr-2ch-tripletp.dat iso2lr-2ch-triplets.dat
