EXTRA_DIST = isolr-2ch-def.dat isolr-2ch-doubletdiffmm.dat \
isolr-2ch-doubletdiffmp.dat isolr-2ch-doubletdiffpm.dat \
isolr-2ch-doubletdiffpp.dat isolr-2ch-doubletmm.dat isolr-2ch-doubletmp.dat \
isolr-2ch-doubletpm.dat isolr-2ch-doubletpp.dat isolr-2ch-In2.dat \
isolr-2ch-offdiag.dat isolr-2ch-QN.dat isolr-2ch-singlet.dat \
isolr-2ch-singlet-odd.dat isolr-2ch-spindown-isodowna.dat \
isolr-2ch-spindown-isodownb.dat isolr-2ch-spindown-isodowndiffa.dat \
isolr-2ch-spindown-isodowndiffb.dat isolr-2ch-spindown-isoupa.dat \
isolr-2ch-spindown-isoupb.dat isolr-2ch-spindown-isoupdiffa.dat \
isolr-2ch-spindown-isoupdiffb.dat isolr-2ch-spinup-isodowna.dat \
isolr-2ch-spinup-isodownb.dat isolr-2ch-spinup-isodowndiffa.dat \
isolr-2ch-spinup-isodowndiffb.dat isolr-2ch-spinup-isoupa.dat \
isolr-2ch-spinup-isoupb.dat isolr-2ch-spinup-isoupdiffa.dat \
isolr-2ch-spinup-isoupdiffb.dat isolr-2ch-tripletdiffm.dat \
isolr-2ch-tripletdiffp.dat isolr-2ch-tripletdiffs.dat isolr-2ch-tripletm.dat \
isolr-2ch-tripletp.dat isolr-2ch-triplets.dat
