EXTRA_DIST = isoszlr-2ch-In2.dat isoszlr-2ch-QN.dat isoszlr-2ch-def.dat \
isoszlr-2ch-details.dat isoszlr-2ch-doubletdiffmm.dat \
isoszlr-2ch-doubletdiffmp.dat isoszlr-2ch-doubletdiffpm.dat \
isoszlr-2ch-doubletdiffpp.dat isoszlr-2ch-doubletmm.dat \
isoszlr-2ch-doubletmp.dat isoszlr-2ch-doubletpm.dat \
isoszlr-2ch-doubletpp.dat isoszlr-2ch-offdiag.dat \
isoszlr-2ch-singlet-odd.dat isoszlr-2ch-singlet.dat \
isoszlr-2ch-spindown-isodowna.dat isoszlr-2ch-spindown-isodownb.dat \
isoszlr-2ch-spindown-isodowndiffa.dat isoszlr-2ch-spindown-isodowndiffb.dat \
isoszlr-2ch-spindown-isoupa.dat isoszlr-2ch-spindown-isoupb.dat \
isoszlr-2ch-spindown-isoupdiffa.dat isoszlr-2ch-spindown-isoupdiffb.dat \
isoszlr-2ch-spinup-isodowna.dat isoszlr-2ch-spinup-isodownb.dat \
isoszlr-2ch-spinup-isodowndiffa.dat isoszlr-2ch-spinup-isodowndiffb.dat \
isoszlr-2ch-spinup-isoupa.dat isoszlr-2ch-spinup-isoupb.dat \
isoszlr-2ch-spinup-isoupdiffa.dat isoszlr-2ch-spinup-isoupdiffb.dat \
isoszlr-2ch-tripletdiffm.dat isoszlr-2ch-tripletdiffp.dat \
isoszlr-2ch-tripletdiffs.dat isoszlr-2ch-tripletm.dat \
isoszlr-2ch-tripletp.dat isoszlr-2ch-triplets.dat
