EXTRA_DIST = none-1ch-Imtot.dat none-1ch-In2.dat none-1ch-Iptot.dat \
none-1ch-Ixtot.dat none-1ch-Iytot.dat none-1ch-Iztot.dat \
none-1ch-QN.dat none-1ch-Qtot.dat none-1ch-a-AN-DO.dat \
none-1ch-a-AN-UP.dat none-1ch-a-CR-DO.dat none-1ch-a-CR-UP.dat \
none-1ch-def.dat none-1ch-diag-DOWN.dat none-1ch-diag-UP.dat \
none-1ch-diag.dat none-1ch-doublet.dat none-1ch-offdiag-AN-DO.dat \
none-1ch-offdiag-AN-UP.dat none-1ch-offdiag-CR-DO.dat \
none-1ch-offdiag-CR-UP.dat none-1ch-singlet.dat none-1ch-spinx.dat \
none-1ch-spiny.dat none-1ch-spinz.dat none-2ch-Imtot.dat \
none-2ch-In2.dat none-2ch-Iptot.dat none-2ch-Ixtot.dat \
none-2ch-Iytot.dat none-2ch-Iztot.dat none-2ch-QN.dat \
none-2ch-Qtot.dat none-2ch-a-AN-DO.dat none-2ch-a-AN-UP.dat \
none-2ch-a-CR-DO.dat none-2ch-a-CR-UP.dat none-2ch-b-AN-DO.dat \
none-2ch-b-AN-UP.dat none-2ch-b-CR-DO.dat none-2ch-b-CR-UP.dat \
none-2ch-def.dat none-2ch-diag-DOWN.dat none-2ch-diag-UP.dat \
none-2ch-diag.dat none-2ch-doublet.dat none-2ch-offdiag-AN-DO.dat \
none-2ch-offdiag-AN-UP.dat none-2ch-offdiag-CR-DO.dat \
none-2ch-offdiag-CR-UP.dat none-2ch-singlet.dat none-2ch-spinx.dat \
none-2ch-spiny.dat none-2ch-spinz.dat
