EXTRA_DIST = p-1ch-Imtot.dat p-1ch-In2.dat p-1ch-Iptot.dat p-1ch-Ixtot.dat p-1ch-Iytot.dat \
p-1ch-Iztot.dat p-1ch-QN.dat p-1ch-Qtot.dat p-1ch-a-AN-DO.dat \
p-1ch-a-AN-UP.dat p-1ch-a-CR-DO.dat p-1ch-a-CR-UP.dat p-1ch-def.dat \
p-1ch-details.dat p-1ch-diag-DOWN.dat p-1ch-diag-UP.dat p-1ch-diag.dat \
p-1ch-doublet.dat p-1ch-offdiag-AN-DO.dat p-1ch-offdiag-AN-UP.dat \
p-1ch-offdiag-CR-DO.dat p-1ch-offdiag-CR-UP.dat p-1ch-singlet.dat \
p-1ch-spinx.dat p-1ch-spiny.dat p-1ch-spinz.dat p-2ch-Imtot.dat \
p-2ch-In2.dat p-2ch-Iptot.dat p-2ch-Ixtot.dat p-2ch-Iytot.dat \
p-2ch-Iztot.dat p-2ch-QN.dat p-2ch-Qtot.dat p-2ch-a-AN-DO.dat \
p-2ch-a-AN-UP.dat p-2ch-a-CR-DO.dat p-2ch-a-CR-UP.dat \
p-2ch-b-AN-DO.dat p-2ch-b-AN-UP.dat p-2ch-b-CR-DO.dat \
p-2ch-b-CR-UP.dat p-2ch-def.dat p-2ch-details.dat p-2ch-diag-DOWN.dat \
p-2ch-diag-UP.dat p-2ch-diag.dat p-2ch-doublet.dat \
p-2ch-offdiag-AN-DO.dat p-2ch-offdiag-AN-UP.dat \
p-2ch-offdiag-CR-DO.dat p-2ch-offdiag-CR-UP.dat p-2ch-singlet.dat \
p-2ch-spinx.dat p-2ch-spiny.dat p-2ch-spinz.dat
