EXTRA_DIST = pp-2ch-Imtot.dat pp-2ch-In2.dat pp-2ch-Iptot.dat pp-2ch-Ixtot.dat \
pp-2ch-Iytot.dat pp-2ch-Iztot.dat pp-2ch-QN.dat pp-2ch-Qtot.dat \
pp-2ch-a-AN-DO.dat pp-2ch-a-AN-UP.dat pp-2ch-a-CR-DO.dat \
pp-2ch-a-CR-UP.dat pp-2ch-b-AN-DO.dat pp-2ch-b-AN-UP.dat \
pp-2ch-b-CR-DO.dat pp-2ch-b-CR-UP.dat pp-2ch-def.dat \
pp-2ch-details.dat pp-2ch-diag-DOWN.dat pp-2ch-diag-UP.dat \
pp-2ch-diag.dat pp-2ch-doubleta.dat pp-2ch-doubletb.dat \
pp-2ch-offdiag-AN-DO.dat pp-2ch-offdiag-AN-UP.dat \
pp-2ch-offdiag-CR-DO.dat pp-2ch-offdiag-CR-UP.dat pp-2ch-singlet.dat \
pp-2ch-spinx.dat pp-2ch-spiny.dat pp-2ch-spinz.dat
