EXTRA_DIST = qsc3-In2.dat qsc3-QN.dat qsc3-def.dat qsc3-details.dat qsc3-diag.dat \
qsc3-offdiag.dat qsc3-spindown0-a.dat qsc3-spindown0-b.dat \
qsc3-spindown0-c.dat qsc3-spindown1-a.dat qsc3-spindown1-b.dat \
qsc3-spindown1-c.dat qsc3-spindown2-a.dat qsc3-spindown2-b.dat \
qsc3-spindown2-c.dat qsc3-spinup0-a.dat qsc3-spinup0-b.dat \
qsc3-spinup0-c.dat qsc3-spinup1-a.dat qsc3-spinup1-b.dat \
qsc3-spinup1-c.dat qsc3-spinup2-a.dat qsc3-spinup2-b.dat \
qsc3-spinup2-c.dat
