EXTRA_DIST = qslr-2ch-def.dat qslr-2ch-diag.dat qslr-2ch-doubletdiffm.dat \
qslr-2ch-doubletdiffp.dat qslr-2ch-doubletm.dat qslr-2ch-doubletp.dat \
qslr-2ch-In2.dat \
qslr-2ch-offdiag.dat qslr-2ch-QN.dat qslr-2ch-singlet.dat \
qslr-2ch-singlet-odd.dat qslr-2ch-spindowna.dat qslr-2ch-spindownb.dat \
qslr-2ch-spindowndiffa.dat qslr-2ch-spindowndiffb.dat qslr-2ch-spinupa.dat \
qslr-2ch-spinupb.dat qslr-2ch-spinupdiffa.dat qslr-2ch-spinupdiffb.dat \
qslr-2ch-tripletdiffm.dat qslr-2ch-tripletdiffp.dat \
qslr-2ch-tripletdiffs.dat qslr-2ch-tripletm.dat qslr-2ch-tripletp.dat \
qslr-2ch-triplets.dat
