EXTRA_DIST = \
qst-In2.dat qst-QN.dat qst-def.dat qst-diag.dat \
qst-doubletm+1.dat qst-doubletm-1.dat qst-doubletm0.dat \
qst-doubletp+1.dat qst-doubletp-1.dat qst-doubletp0.dat \
qst-offdiag.dat qst-singlet.dat qst-spindo+1.dat qst-spindo-1.dat \
qst-spindo0.dat qst-spinup+1.dat qst-spinup-1.dat qst-spinup0.dat \
qst-tripletm.dat qst-tripletp.dat qst-triplets.dat \
qst-orb-tripletm.dat qst-orb-tripletp.dat qst-orb-triplets.dat
