EXTRA_DIST = qsz-1ch-def.dat qsz-1ch-diag.dat qsz-1ch-doubletm.dat \
qsz-1ch-doubletp.dat \
qsz-1ch-In2.dat qsz-1ch-offdiag.dat qsz-1ch-QN.dat qsz-1ch-singlet.dat \
qsz-1ch-spindowna.dat qsz-1ch-spinupa.dat qsz-1ch-tripletm.dat \
qsz-1ch-tripletp.dat qsz-1ch-triplets.dat qsz-2ch-def.dat qsz-2ch-diag.dat \
qsz-2ch-doubletm.dat qsz-2ch-doubletp.dat \
qsz-2ch-In2.dat qsz-2ch-offdiag.dat \
qsz-2ch-QN.dat qsz-2ch-singlet.dat qsz-2ch-spindowna.dat \
qsz-2ch-spindownb.dat qsz-2ch-spinupa.dat qsz-2ch-spinupb.dat \
qsz-2ch-tripletm.dat qsz-2ch-tripletp.dat qsz-2ch-triplets.dat \
qsz-3ch-def.dat qsz-3ch-diag.dat qsz-3ch-doubletm.dat qsz-3ch-doubletp.dat \
qsz-3ch-In2.dat \
qsz-3ch-offdiag.dat qsz-3ch-QN.dat qsz-3ch-singlet.dat qsz-3ch-spindowna.dat \
qsz-3ch-spindownb.dat qsz-3ch-spindownc.dat qsz-3ch-spinupa.dat \
qsz-3ch-spinupb.dat qsz-3ch-spinupc.dat qsz-3ch-tripletm.dat \
qsz-3ch-tripletp.dat qsz-3ch-triplets.dat qsz-4ch-In2.dat qsz-4ch-QN.dat \
qsz-1ch-spinz.dat qsz-2ch-spinz.dat qsz-3ch-spinz.dat \
qsz-1ch-diag-UP.dat qsz-1ch-offdiag-UP.dat qsz-2ch-diag-UP.dat \
qsz-2ch-offdiag-UP.dat qsz-3ch-diag-UP.dat qsz-3ch-offdiag-UP.dat \
qsz-1ch-diag-DOWN.dat qsz-1ch-offdiag-DOWN.dat qsz-2ch-diag-DOWN.dat \
qsz-2ch-offdiag-DOWN.dat qsz-3ch-diag-DOWN.dat qsz-3ch-offdiag-DOWN.dat \
qsz-2ch-runghop-DOWN.dat qsz-2ch-runghop-UP.dat qsz-2ch-runghop.dat \
qsz-2ch-offdiag-mix-DOWN.dat qsz-2ch-offdiag-mix-UP.dat \
qsz-2ch-offdiag-mix.dat
