EXTRA_DIST = one_site_qsztz_basis.dat qsztz-In2.dat qsztz-QN.dat qsztz-def.dat \
qsztz-details.dat qsztz-diag.dat qsztz-doubletm+1.dat \
qsztz-doubletm-1.dat qsztz-doubletm0.dat qsztz-doubletp+1.dat \
qsztz-doubletp-1.dat qsztz-doubletp0.dat qsztz-offdiag.dat \
qsztz-singlet.dat qsztz-spindo+1.dat qsztz-spindo-1.dat \
qsztz-spindo0.dat qsztz-spinup+1.dat qsztz-spinup-1.dat \
qsztz-spinup0.dat qsztz-tripletm.dat qsztz-tripletp.dat \
qsztz-triplets.dat
