EXTRA_DIST = spsu2-1ch-def.dat spsu2-1ch-diag.dat spsu2-1ch-doubletm.dat \
spsu2-1ch-doubletp.dat spsu2-1ch-In2.dat spsu2-1ch-isospinx.dat \
spsu2-1ch-offdiag.dat spsu2-1ch-QN.dat spsu2-1ch-singlet.dat \
spsu2-1ch-spindowna.dat spsu2-1ch-spinupa.dat spsu2-1ch-tripletm.dat \
spsu2-1ch-tripletp.dat spsu2-1ch-triplets.dat spsu2-2ch-def.dat \
spsu2-2ch-diag.dat spsu2-2ch-doubletm.dat spsu2-2ch-doubletp.dat \
spsu2-2ch-In2.dat \
spsu2-2ch-isospinx.dat spsu2-2ch-offdiag.dat spsu2-2ch-QN.dat \
spsu2-2ch-singlet.dat spsu2-2ch-spindowna.dat spsu2-2ch-spindownb.dat \
spsu2-2ch-spinupa.dat spsu2-2ch-spinupb.dat spsu2-2ch-tripletm.dat \
spsu2-2ch-tripletp.dat spsu2-2ch-triplets.dat \
spsu2-1ch-anomalous.dat  spsu2-2ch-anomalous.dat \
spsu2-1ch-Ixtot.dat spsu2-1ch-Qtot.dat spsu2-2ch-Ixtot.dat \
spsu2-2ch-Qtot.dat \
spsu2-1ch-Iptot.dat spsu2-2ch-Iptot.dat \
spsu2-1ch-Imtot.dat spsu2-2ch-Imtot.dat \
spsu2-1ch-Iztot.dat spsu2-2ch-Iztot.dat \
spsu2-2ch-qdiff.dat spsu2-2ch-q1.dat spsu2-2ch-q2.dat \
spsu2-3ch-Imtot.dat spsu2-3ch-In2.dat spsu2-3ch-Iptot.dat \
spsu2-3ch-Ixtot.dat spsu2-3ch-Iztot.dat spsu2-3ch-QN.dat \
spsu2-3ch-Qtot.dat spsu2-3ch-anomalous.dat spsu2-3ch-def.dat \
spsu2-3ch-details.dat spsu2-3ch-diag.dat spsu2-3ch-doubletm.dat \
spsu2-3ch-doubletp.dat spsu2-3ch-isospinx.dat spsu2-3ch-offdiag.dat \
spsu2-3ch-singlet.dat spsu2-3ch-spindowna.dat spsu2-3ch-spindownb.dat \
spsu2-3ch-spindownc.dat spsu2-3ch-spinupa.dat spsu2-3ch-spinupb.dat \
spsu2-3ch-spinupc.dat spsu2-3ch-tripletm.dat spsu2-3ch-tripletp.dat \
spsu2-3ch-triplets.dat
