EXTRA_DIST = spsu2t-In2.dat spsu2t-QN.dat spsu2t-anomalous.dat \
spsu2t-def.dat spsu2t-details.dat spsu2t-diag.dat \
spsu2t-doubletm+1.dat spsu2t-doubletm-1.dat spsu2t-doubletm0.dat \
spsu2t-doubletp+1.dat spsu2t-doubletp-1.dat spsu2t-doubletp0.dat \
spsu2t-isospinx.dat spsu2t-offdiag.dat spsu2t-singlet.dat \
spsu2t-spindo+1.dat spsu2t-spindo-1.dat spsu2t-spindo0.dat \
spsu2t-spinup+1.dat spsu2t-spinup-1.dat spsu2t-spinup0.dat \
spsu2t-tripletm.dat spsu2t-tripletp.dat spsu2t-triplets.dat
