EXTRA_DIST = spu1-1ch-def.dat spu1-1ch-diag.dat spu1-1ch-doubletm.dat \
spu1-1ch-doubletp.dat \
spu1-1ch-In2.dat spu1-1ch-isospinx.dat \
spu1-1ch-offdiag.dat spu1-1ch-QN.dat spu1-1ch-singlet.dat \
spu1-1ch-spindowna.dat spu1-1ch-spinupa.dat spu1-1ch-tripletm.dat \
spu1-1ch-tripletp.dat spu1-1ch-triplets.dat spu1-2ch-def.dat \
spu1-2ch-diag.dat spu1-2ch-doubletm.dat spu1-2ch-doubletp.dat \
spu1-2ch-In2.dat \
spu1-2ch-isospinx.dat spu1-2ch-offdiag.dat spu1-2ch-QN.dat \
spu1-2ch-singlet.dat spu1-2ch-spindowna.dat spu1-2ch-spindownb.dat \
spu1-2ch-spinupa.dat spu1-2ch-spinupb.dat spu1-2ch-tripletm.dat \
spu1-2ch-tripletp.dat spu1-2ch-triplets.dat \
spu1-1ch-anomalous.dat  spu1-2ch-anomalous.dat \
spu1-1ch-Imtot.dat spu1-1ch-Iptot.dat spu1-1ch-Ixtot.dat spu1-1ch-Qtot.dat \
spu1-2ch-Imtot.dat spu1-2ch-Iptot.dat spu1-2ch-Ixtot.dat spu1-2ch-Qtot.dat \
spu1-1ch-Iztot.dat spu1-2ch-Iztot.dat \
spu1-2ch-q1.dat spu1-2ch-q1do.dat spu1-2ch-q1up.dat spu1-2ch-q2.dat \
spu1-2ch-q2do.dat spu1-2ch-q2up.dat spu1-2ch-qdiff.dat \
spu1-1ch-diag-DOWN.dat spu1-1ch-diag-UP.dat spu1-1ch-offdiag-DOWN.dat \
spu1-1ch-offdiag-UP.dat spu1-2ch-diag-DOWN.dat spu1-2ch-diag-UP.dat \
spu1-2ch-offdiag-DOWN.dat spu1-2ch-offdiag-UP.dat
